; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jserror.c_js_newerrorx.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jserror.c_js_newerrorx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JS_CERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"message\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"stackTrace\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32*)* @js_newerrorx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @js_newerrorx(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* @JS_CERROR, align 4
  %10 = load i32*, i32** %6, align 8
  %11 = call i32 @jsV_newobject(i32* %8, i32 %9, i32* %10)
  %12 = call i32 @js_pushobject(i32* %7, i32 %11)
  %13 = load i32*, i32** %4, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @js_pushstring(i32* %13, i8* %14)
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @js_setproperty(i32* %16, i32 -2, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %18 = load i32*, i32** %4, align 8
  %19 = call i64 @jsB_stacktrace(i32* %18, i32 0)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %3
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @js_setproperty(i32* %22, i32 -2, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  br label %24

24:                                               ; preds = %21, %3
  ret void
}

declare dso_local i32 @js_pushobject(i32*, i32) #1

declare dso_local i32 @jsV_newobject(i32*, i32, i32*) #1

declare dso_local i32 @js_pushstring(i32*, i8*) #1

declare dso_local i32 @js_setproperty(i32*, i32, i8*) #1

declare dso_local i64 @jsB_stacktrace(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
